--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@
     border-left: 2px solid black;
     border-bottom: 2px solid black;
     border-right: 2px solid black;
+    font-size: 14px;
 
 }
  input {
